--- a/OptimusTech/index.html
+++ b/OptimusTech/index.html
@@ -32,7 +32,6 @@
             <p class="texto-secundario"> Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de
                 todo o mundo a se concentrarem naquilo que é realmente importante para elas.
             </p>
-            
         </section>
         <!- Dia 2 do Projeto ->
 
@@ -60,6 +59,76 @@
                 </div>
             </div>
 
+        </section>
+        <!- Dia 3 do Projeto ->
+
+        <section>
+            <div class="section-vagas">
+                <span class="subtitulo-vagas">Vagas abertas!</span>
+                <h2 class="titulo-vagas"> Estamos procurando por talentos </h2>
+                <p class="texto-vagas"> Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+                <img src="img/Image.svg" alt="Funcionarios da OptimusTech" class="imagem-funcionarios">
+            </div>
+        </section>
+        <!- Dia 4 do Projeto ->
+
+        <section class="quadro-vagas">
+            <div class="vaga-geral">
+                <h3 class="area-vaga">Design</h3>
+                <div class="vaga">
+                    <h4 class="nome-vaga"> Product Designer </h4>
+                    <div class="descricao-vaga">
+                        <p class="dados-vaga">Full-time</p>
+                        <p class="dados-vaga">Faixa salarial: R$7.000</p>
+                    </div>
+                </div>
+                <div class="vaga">
+                    <h4 class="nome-vaga"> UX Designer </h4>
+                    <div class="descricao-vaga">
+                        <p class="dados-vaga">Full-time</p>
+                        <p class="dados-vaga">Faixa salarial: R$6.000</p>
+                    </div>
+                </div>
+            </div>
+            <div class="vaga-geral">
+                <h3 class="area-vaga">Desenvolvimento de Software</h3>
+                <div class="vaga">
+                    <h4 class="nome-vaga"> Desenvolvedor(a) iOS </h4>
+                    <div class="descricao-vaga">
+                        <p class="dados-vaga">Full-time</p>
+                        <p class="dados-vaga">Faixa salarial: R$8.000</p>
+                    </div>
+                </div>
+                <div class="vaga">
+                    <h4 class="nome-vaga"> Desenvolvedor(a) Front-end </h4>
+                    <div class="descricao-vaga">
+                        <p class="dados-vaga">Full-time</p>
+                        <p class="dados-vaga">Faixa salarial: R$7.000</p>
+                    </div>
+                </div>
+                <div class="vaga">
+                    <h4 class="nome-vaga"> Desenvolvedor(a) Back-end </h4>
+                    <div class="descricao-vaga">
+                        <p class="dados-vaga">Full-time</p>
+                        <p class="dados-vaga">Faixa salarial: R$8.000</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!- Dia 5 do Projeto ->
+
+        <section class="colaboradores">
+            <div class="opiniao-colaborador">
+                <span class="subtitulo-opiniao">Veja o que nossos colaboradores falam sobre nós</span>
+                <h2 class="texto-opiniao">OptimusTech se importa com a saúde dos seus colaboradores e 
+                    sempre procura nos dar todo tipo de auxílio possível.
+                </h2>
+            </div>
+            <div class="dados-colaborador">
+                <img src="img/Avatar.svg" alt="Avatar da Colaboradora Julia Castro" class="avatar-colab">
+                <p class="nome-colab">Júlia Castro</p>
+                <p class="funcao-colab">Desenvolvedora Web</p>
+            </div>
         </section>
 </body>
 </html>
