--- a/OptimusTech/index.html
+++ b/OptimusTech/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/worldwide 1 (Traced).svg">
 </head>
 <body>
     <header>
@@ -75,44 +76,54 @@
         <section class="quadro-vagas">
             <div class="vaga-geral">
                 <h3 class="area-vaga">Design</h3>
-                <div class="vaga">
-                    <h4 class="nome-vaga"> Product Designer </h4>
-                    <div class="descricao-vaga">
-                        <p class="dados-vaga">Full-time</p>
-                        <p class="dados-vaga">Faixa salarial: R$7.000</p>
+                <a href="#" class="caixa-vaga">
+                    <div class="vaga">
+                        <h4 class="nome-vaga"> Product Designer </h4>
+                        <div class="descricao-vaga">
+                            <p class="dados-vaga">Full-time</p>
+                            <p class="dados-vaga">Faixa salarial: R$7.000</p>
+                        </div>
                     </div>
-                </div>
-                <div class="vaga">
-                    <h4 class="nome-vaga"> UX Designer </h4>
-                    <div class="descricao-vaga">
-                        <p class="dados-vaga">Full-time</p>
-                        <p class="dados-vaga">Faixa salarial: R$6.000</p>
+                </a>
+                <a href="#" class="caixa-vaga">
+                    <div class="vaga">
+                        <h4 class="nome-vaga"> UX Designer </h4>
+                        <div class="descricao-vaga">
+                            <p class="dados-vaga">Full-time</p>
+                            <p class="dados-vaga">Faixa salarial: R$6.000</p>
+                        </div>
                     </div>
-                </div>
+                </a>                   
             </div>
             <div class="vaga-geral">
                 <h3 class="area-vaga">Desenvolvimento de Software</h3>
-                <div class="vaga">
-                    <h4 class="nome-vaga"> Desenvolvedor(a) iOS </h4>
-                    <div class="descricao-vaga">
-                        <p class="dados-vaga">Full-time</p>
-                        <p class="dados-vaga">Faixa salarial: R$8.000</p>
+                <a href="#" class="caixa-vaga">
+                    <div class="vaga">
+                        <h4 class="nome-vaga"> Desenvolvedor(a) iOS </h4>
+                        <div class="descricao-vaga">
+                            <p class="dados-vaga">Full-time</p>
+                            <p class="dados-vaga">Faixa salarial: R$8.000</p>
+                        </div>
                     </div>
-                </div>
-                <div class="vaga">
-                    <h4 class="nome-vaga"> Desenvolvedor(a) Front-end </h4>
-                    <div class="descricao-vaga">
-                        <p class="dados-vaga">Full-time</p>
-                        <p class="dados-vaga">Faixa salarial: R$7.000</p>
+                </a>
+                <a href="#">                 
+                    <div class="vaga">
+                        <h4 class="nome-vaga"> Desenvolvedor(a) Front-end </h4>
+                        <div class="descricao-vaga">
+                            <p class="dados-vaga">Full-time</p>
+                            <p class="dados-vaga">Faixa salarial: R$7.000</p>
+                        </div>
                     </div>
-                </div>
-                <div class="vaga">
-                    <h4 class="nome-vaga"> Desenvolvedor(a) Back-end </h4>
-                    <div class="descricao-vaga">
-                        <p class="dados-vaga">Full-time</p>
-                        <p class="dados-vaga">Faixa salarial: R$8.000</p>
+                </a>
+                <a href="#">  
+                    <div class="vaga">
+                        <h4 class="nome-vaga"> Desenvolvedor(a) Back-end </h4>
+                        <div class="descricao-vaga">
+                            <p class="dados-vaga">Full-time</p>
+                            <p class="dados-vaga">Faixa salarial: R$8.000</p>
+                        </div>
                     </div>
-                </div>
+                </a>    
             </div>
         </section>
         <!- Dia 5 do Projeto ->
@@ -130,5 +141,16 @@
                 <p class="funcao-colab">Desenvolvedora Web</p>
             </div>
         </section>
+        <!- Dia 6 do Projeto ->
+        
+        <footer>
+            <h2 class="titulo-footer"> Acompanhe as nossas oportunidades</h2>
+            <p class="texto-footer"> Seja o primeiro a saber quando novas vagas serão abertas!</p>
+            <div class="cadastro">
+                <input type="text" name="Seu e-mail" size="43" placeholder="Seu e-mail" class="email">
+              <button class="botao-entrar"> Cadastrar </button>
+            </div>
+            <p class="direitos">© 2022 OptimusTech. Todos os direitos reservados.</p>
+        </footer>
 </body>
 </html>
