--- a/OptimusTech/index.html
+++ b/OptimusTech/index.html
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">                 
+                <a href="#" class="caixa-vaga">                 
                     <div class="vaga">
                         <h4 class="nome-vaga"> Desenvolvedor(a) Front-end </h4>
                         <div class="descricao-vaga">
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">  
+                <a href="#" class="caixa-vaga">  
                     <div class="vaga">
                         <h4 class="nome-vaga"> Desenvolvedor(a) Back-end </h4>
                         <div class="descricao-vaga">
